# jsonptr

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  QUALITY.md  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: PROJECT_BRIEF.md
src/jsonptr/: __init__.py  _errors.py  _index.py  _parse.py  _resolve.py
tests/: conftest.py  test_api_surface.py  test_errors.py  test_index.py  test_integration.py  test_mutate.py  test_parse.py  test_resolve.py  test_uri_fragment.py
