[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jsonptr"
version = "0.1.0"
description = "RFC 6901 JSON Pointer: parse, resolve, get/set/remove on nested dicts and lists. Zero dependencies, fully typed."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "nripankadas07" }]
keywords = [
    "json",
    "pointer",
    "rfc-6901",
    "jsonpointer",
    "json-path",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/nripankadas07/jsonptr"
Repository = "https://github.com/nripankadas07/jsonptr"

[project.optional-dependencies]
dev = [
    "build>=1.2",
    "mypy>=1.10",
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.5",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
jsonptr = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"

[tool.mypy]
strict = true
files = ["src/jsonptr"]
mypy_path = "src"

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = [
    "B",
    "C4",
    "E",
    "F",
    "I",
    "N",
    "PERF",
    "PYI",
    "RET",
    "RUF",
    "SIM",
    "UP",
    "W",
]

[tool.coverage.run]
branch = true
source = ["jsonptr"]

[tool.coverage.report]
fail_under = 100
show_missing = true
skip_covered = true
